# AIFP

./: .coverage  .gitignore  .mcpbignore  CHANGELOG.md  FullDescription.md  LICENSE  PHASE-6-COMPLETE-SUMMARY.md  PHASE-6-VALIDATION-REPORT.md  README.md  aifp.mcpb  aimfp.mcpb  manifest.json  pyproject.toml  server.json
.aifp/: ProjectBlueprint.md  project.db
.aifp/backups/: project.db.bak.20260204_203059
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish-mcp.yml  python-publish.yml
aifp-plugin/: .mcp.json
aifp-plugin/commands/: end.md  init.md  run.md  status.md
aifp-plugin/hooks/: hooks.json
aimfp-plugin/: .mcp.json
aimfp-plugin/commands/: end.md  init.md  run.md  status.md
aimfp-plugin/hooks/: hooks.json
dev/: COMPLETE-directive-schema-alignment-plan.md  COMPLETE-mcp-database-restructuring-plan.md  bump-version.py  directives-db-alignment-summary.md  mcp-database-restructuring-plan.md  migration-scripts-plan.md  rename-aifp-to-aimfp.py  sync-directives.py
dev/directives-json/: directive_flow_fp.json  directive_flow_project.json  directive_flow_user_preferences.json  directives-fp-aux.json  directives-fp-core.json  directives-git.json  directives-project.json  directives-user-pref.json  directives-user-system.json
dev/helpers-json/: helpers-core.json  helpers-git.json  helpers-index.json  helpers-orchestrators.json  helpers-project-1.json  helpers-project-2.json  helpers-project-3.json  helpers-project-4.json  helpers-project-5.json  helpers-project-6.json  helpers-project-7.json  helpers-project-8.json  helpers-project-9.json  helpers-project-modules.json  helpers-settings.json  helpers-user-custom.json
dev/logs/: sync_report.json
docs/: AIFP_SCRIPTS_CLEANUP_ANALYSIS.md  AdditionalForceActionDiscussion.txt  CHANGELOG-preference-integration.md  CLEANUP_PROGRESS.md  COMPLETE_HELPERS_LIST.md  COMPREHENSIVE_SETTINGS_SPEC.md  DIRECTIVES_INTERACTIONS_REVIEW.md  DIRECTIVES_INTERACTIONS_STATUS_2025-12-16.md  DIRECTIVE_ADDITIONS_IMPLEMENTATION_PLAN.md  DIRECTIVE_CLEANUP_REVISED.md  DIRECTIVE_CLEANUP_TASK.md  DIRECTIVE_FLOW_GAP_ANALYSIS.md  DIRECTIVE_FLOW_HELPERS_REFACTOR.md  DIRECTIVE_HELPER_MAPPING_IMPLEMENTATION_PLAN.md  DIRECTIVE_JSON_CLEANUP_REPORT_2025-12-16.md  DIRECTIVE_JSON_UPDATES_2026-01-15.md  DIRECTIVE_NAVIGATION_SYSTEM.md  DIRECTIVE_SCHEMA_REVIEW_2025-12-16.md  DIRECTIVE_WORKFLOW_PATH.md  FP_DIRECTIVE_CLEANUP_TASK.md  FP_DIRECTIVE_UPDATE_GUIDE.md  GLOBAL_STATE_AND_DRY_UPDATES.md  GUIDES-WORKFLOW-ANALYSIS.md  HELPERS_SESSION_1_SUMMARY.md  HELPER_AUDIT_REPORT.md  HELPER_DIRECTIVE_INTEGRATION_PLAN.md  HELPER_DIRECTIVE_SCHEMA_DESIGN.md  HELPER_IMPLEMENTATION_PLAN.md  HELPER_IMPORT_ANALYSIS_2025-12-16.md  HELPER_MAPPING_ANALYSIS.md  IMPLEMENTATION-PLAN-DIRECTIVE-MD-FILES.md  IMPORT_REPORT_2026-01-10.md  INFRASTRUCTURE_GOALS.md  MAPPING_SETUP_COMPLETE.md  MCPForceActionDiscussion.txt  MD_FILES_CLEANUP_ANALYSIS.md  MD_FILES_UPDATE_SUMMARY.md  NEW_HELPERS_RETURN_STATEMENTS.md  NEW_HELPERS_SPECIFICATIONS.md  NOTE_TYPE_CLEANUP_READY.md  (+93 more)
docs/COMPLETE/: ARCHIVE_MANIFEST.md
docs/MCP/: MCP_IMPLEMENTATION_PLAN.md  SESSION_CHANGES_2026-02-05.md  UNIQUE_CONSTRAINT_PLAN.md
docs/blueprints/: blueprint_mcp.md  (+11 more)
documentation/: settings.local.json
scripts/: cleanup_fp_directives.py
sys-prompt/: aifp_system_prompt.txt  aifp_system_prompt_proposed.txt  aimfp_system_prompt.txt
tests/: conftest.py  submission_tests.py
(+611 files in other folders)
