[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifp"
version = "0.1.1"
description = "AI Functional Procedural - MCP server for database-driven FP development"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aryan Duntley", email = "aryanduntley@gmail.com"}
]
keywords = ["mcp", "functional-programming", "ai", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "watchdog",
]

[project.urls]
Homepage = "https://github.com/aryanduntley/AIFP"
Repository = "https://github.com/aryanduntley/AIFP"
Issues = "https://github.com/aryanduntley/AIFP/issues"

[project.scripts]
aifp = "aifp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aifp = [
    "database/*.db",
    "database/schemas/*.sql",
    "database/initialization/*.sql",
    "templates/*.md",
    "templates/**/*.py",
    "templates/**/*.md",
    "reference/**/*.md",
    "reference/**/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
